--- a/index.html
+++ b/index.html
@@ -5,20 +5,12 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Обычная визитка че там">
+        <title>amore</title>
         <link href="https://fl1yd.su/assets/images/icon.png" rel="icon">
         <link href="./amoreme/style.css" rel="stylesheet">
         <title></title>
     </head>
     <body>
-        <div id="donate" style="display: none;">
-            <div class="popup">
-                <p>QIWI</p>
-                <div class="field">
-                    <input class="field__input" id="donate_ammount" type="number" placeholder="100" min="1" max="10000" value="100">
-                    <input class="field__button" type="submit" value="Донат" onclick="generate_qiwi_url()">
-                </div>
-            </div>
-        </div>
         <main>
             <div class="info">
                 <img src="./amoreme/photo_2023-01-19_22-27-12.jpg" alt="avatar.png">
