--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <li><a href="https://t.me/amorescam">TELEGRAM</a></li>
                     <li><span class="color">•</span></li>
                     <li><a id="button" href="https://github.com/AmoreForever">GITHUB</a></li>
+                    <li><span class="color">•</span></li>
+                    <li><a id="button" href="http://projects.farkodovme.tk">PROJECTS</a></li>
                 </ul>
             </div>
         </main>
