--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><span class="color">•</span></li>
                     <li><a id="button" href="https://github.com/AmoreForever">GITHUB</a></li>
                     <li><span class="color">•</span></li>
-                    <li><a id="button" href="http://projects.farkodovme.tk">PROJECTS</a></li>
+                    <li><a id="button" href="http://projects.farkhodovme.tk/">PROJECTS</a></li>
                 </ul>
             </div>
         </main>
